# paradis-demo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  README.md  meson.build
include/: paradis.h
src/: paradis.c  paradis.h
test/: radix_test.c  test_utils.h
